Notes for components and coordinates

--- a/main.tex
+++ b/main.tex
@@ -358,7 +358,11 @@ NOTE: wedge can be discussed as constructing parallelepiped
 	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. Further, for $g_{k+1} : S^{k+1} \to \mathbb{R}$, $g_{k+1}(\sigma^{k+1}) = \int_{\sigma^{k+1}} \omega_{k+1}(d\sigma^{k+1}) = f_k(\partial\sigma^{k+1}) = \int_{\partial\sigma^{k+1}}\omega_k(d\partial\sigma^{k+1})$. 
 \end{prop}
 
+\section{Coordinates and components?}
 
+Let $d\lambda$ be an infinitesimal segment that starts at a point $P$. Then the coordinate differences $dx^i$ uniquely identifies $d\lambda$. Therefore we can write $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$ where $e_i$ gives us the infinitesimal segment along the coordinate lines of $x^i$.
+
+Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is the covector that returns the coordinate difference along the $x^i$ coordinate. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.
 
 
 \section{Stoke's Theorem}
