--- a/main.tex
+++ b/main.tex
@@ -355,7 +355,7 @@ NOTE: wedge can be discussed as constructing parallelepiped
 \end{defn}
 
 \begin{prop}
-	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. Further, for $g_{k+1} : S^{k+1} \to \mathbb{R}$, $g_{k+1}(\sigma^{k+1}) = \int_{\sigma^{k+1}} \omega_{k+1}(d\sigma^{k+1}) = f_k(\partial\sigma^{k+1}) = \int_{\partial\sigma^{k+1}}\omega_k(d\partial\sigma^{k+1})$. 
+	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
 \end{prop}
 
 \section{Coordinates and components?}
