--- a/main.tex
+++ b/main.tex
@@ -296,7 +296,6 @@ For some line P, $\int df(P)$ = $\int \frac{\partial f(P)}{{\partial x^i}} dx^i$
 
 
 
-TODO: Try to break this definition, since it doesn't discuss orientation at all. Orientation should be absolutely necessary. 
 \begin{prop}
 	Every linear 1-functional has a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\lambda} \omega_1(d\lambda)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. 
 \end{prop}
@@ -336,7 +335,6 @@ TODO: Try to break this definition, since it doesn't discuss orientation at all.
 
 
 
-NOTE: wedge can be discussed as constructing parallelepiped 
 \begin{defn}
 	
 	The \textbf{wedge product} $\wedge : V^k\times V^j \to V^{k+j}$ combines k-vectors antisymmetrically to generate parallelepipeds. 
@@ -372,21 +370,14 @@ TODO: Show that the definition on local coordinates on the wikipedia page for ex
 TODO: Start talking about coordinates before this
 
 \begin{defn}
-	$\eth : \Omega_k \to \Omega_{k+1}$ is the \textbf{exterior derivative} on k-forms. 
-\end{defn}
-
-\begin{prop}
-	The interior operator $\eth$ on k-functionals is equivalent to the exterior derivative on k-forms. 
-\end{prop}
-
-\begin{proof}
-	\emph{This proof is basically the definition of the exterior derivative. Take this derivation and turn it into a definition for 2.13. The definition and proposition}
-	Consider k-surface $\sigma$ and (k-1)-functional $f$ with associated (k-1)-form $\omega$. 
+	$\eth : \Omega_k \to \Omega_{k+1}$ is the \textbf{exterior derivative} on k-forms, such that for k-surface $\sigma$ and (k-1)-functional $f$ with associated (k-1)-form $\omega$, 
 	
 	$f$($\sigma$) = $\int_{\sigma}\omega(d\sigma)$ and $\eth f(\sigma) = f(\partial\sigma)$
 	
-	$\implies \eth f(\sigma) = \int_{\partial\sigma} \omega(d\partial\sigma) = \int_{\sigma} \eth\omega(d\sigma)$
-\end{proof}
+	$\implies \eth f(\sigma) = \int_{\partial\sigma} \omega(d\partial\sigma) = \int_{\sigma} \eth\omega(d\sigma)$. 
+\end{defn}
+
+
 
 
  
