Local coordinate form derivation

--- a/main.tex
+++ b/main.tex
@@ -363,11 +363,11 @@ Let $d\lambda$ be an infinitesimal segment that starts at a point $P$. Then the 
 Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is the covector that returns the coordinate difference along the $x^i$ coordinate. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.
 
 
+Therefore, for infinitesimal segment d$\lambda$ and k-form $\omega$, $\omega(d\lambda) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$ 
+
 \section{Stoke's Theorem}
 
-TODO: Show that the definition on local coordinates on the wikipedia page for exterior derivative follow from our definitions
 
-TODO: Start talking about coordinates before this
 
 \begin{defn}
 	$\eth : \Omega_k \to \Omega_{k+1}$ is the \textbf{exterior derivative} on k-forms, such that for k-surface $\sigma$ and (k-1)-functional $f$ with associated (k-1)-form $\omega$, 
