--- a/main.tex
+++ b/main.tex
@@ -30,18 +30,22 @@ Ch 3
 - Riem geom (Inner product, ..)
 - ???
 
+- \textbf{Need an introduction here. Figur eout wwhat the very general pupose is. Get a general scope going on, what our goals are. Check whats in the book}
 
 \chapter{Mathematical representations of physical objects}
 
-
+BNumber system is bad. Cant have a chapter with only one section
 \section{Manifolds and continuous quantities}
 
 \subsection{Summary}
 
-In mathematical science, our goal in general is to be able to assign a numerical value to a physical property of some object. This directly gives us \textbf{quantities} as functions that assign real values to physical objects. We then group quantities into sets, requiring those sets to be sufficient to distinguish one physical object from another, and calling those sets \textbf{coordinate systems}. Varying a quantity while keeping the others fixed gives us \textbf{coordinate lines}, and because certain physical properties can be equally well described in different coordinate systems, we introduce \textbf{coordinate transformations}. All of these mathematical constructions together, along with the requirement that the set of possible measured values must be completely covered by subsets with defined quantities, gives us \textbf{manifolds}. 
+- \emph{Very much fix this summary. It's not terribly clear to an outside reader. Far too much stuff here, too much to digest. Coordinate lines and systems may not be necessary}
+In mathematical science, our goal in general is to be able to assign a numerical value to a physical property of some object. This directly gives us \textbf{quantities} as functions that assign real values to physical objects. We then group quantities into sets, requiring those sets to be sufficient to distinguish one physical object from another (\textbf{states are in configurations, quantities identify a configuration}), and calling those sets \textbf{coordinate systems} (\textbf{need to connect audiennce's experience with coordinate with our own}). Varying a quantity while keeping the others fixed gives us \textbf{coordinate lines}, and because certain physical properties can be equally well described in different coordinate systems, we introduce \textbf{coordinate transformations}. (\textbf{A manifold is a set of things that can be distinguished through coordinate systems})All of these mathematical constructions together, along with the requirement that the set of possible measured values must be completely covered by subsets with defined quantities, gives us \textbf{manifolds}. 
 
-Within manifolds may lie smaller manifolds: \textbf{submanifolds}, or \textbf{k-surfaces}. Having a notion of certain points existing on a submanifold and certain points existing outside of it gives us the notion of the \textbf{interior} of a surface. The \textbf{boundary} of a surface follows naturally as being the set of points on that surface that are not on the interior, and therewith also the \textbf{boundary operator}, which takes us from a k-surface to its boundary. 
+\textbf{The k in k-surface isnt clear}
+Within manifolds may lie smaller manifolds: \textbf{submanifolds}, or \textbf{k-surfaces}. Having a notion of certain points existing on a submanifold and certain points existing outside of it gives us the notion of the \textbf{interior} of a surface. The \textbf{boundary} of a surface follows naturally as being the set of points on that surface that are not on the interior (\textbf{we may not want to say that we have always submanifold with a boundary. Also someone may not even have clear what a surface is. }), and therewith also the \textbf{boundary operator}, which takes us from a k-surface to its boundary. 
 
+\textbf{No sense of linearity defined yet. Need anew name for }
 We now want to be able to talk about functions along our k-surfaces. We define then \textbf{k-functionals} as linear functions along our k-surfaces. Because of our requirement of linearity, we will be able to start talking about functions over infinitesimals in Chapter 2. Finally, we introduce the \textbf{interior operator}, which applied to a k-functional is equivalent to applying a boundary operator to a (k+1)-surface, and will allow us to talk about Stoke's Theorem in Chapter 2.  
 
 
@@ -57,19 +61,25 @@ At the heart of investigation in science is the identifying and organizing of ob
 Fahrenheit, mph, percent humidity, location.
 On some set of all possible weather configurations, we look at a specific subset of possibilities described by real numbers. This is our weather report.  }
 
+
+\textbf{Emphaseize that a coordinate system must be enough to distinguish, but not redundant. Also emphaseize that this isn't only true for position, which people usually think of with coordinate system }
 It's quite possible, however, that we won't be able to distinguish between two objects with only one quantity. Say, for instance, that we're talking about weather. Knowing what the temperature will be tomorrow is certainly useful, but as anyone from Florida can tell you, 80$^o$F with 95$\%$ humidity is very different than 80$^o$F with 30$\%$ humidity. In distinguishing objects, then, we will often want to define more than one quantity, to give an even more descriptive way of categorizing objects: the \textbf{coordinate system}.
 
 \begin{defn}
 	A \textbf{coordinate system} $Q$ is a collection of $n$ quantities $q^i : U \to \mathbb{R}^n$ such that there is a one-to-one relationship between the physical objects in $U$ and elements of $\mathbb{R}^n$.
 \end{defn}
 
-Though we can identify multiple quantities, it is still sometimes necessary to isolate specific quantities to identify their particular influence on a system. In an n-dimensional space, holding (n-1) quantities fixed and then allowing the nth quantity to vary would allow us to know specifically the effect that the nth quantity will have on the system, with the assurance that comes from knowing that all other factors are kept the same. On our coordinate system, this varying quantity manifests itself as a line. 
+
+\textbf{May not be able to talk about coordinate lines without defining manifolds. Maybe only the last sentence is the issue}
+Though we can identify multiple quantities, it is still sometimes necessary to isolate specific quantities to identify their particular influence on a system. In an n-dimensional space, holding (n-1) quantities fixed and then allowing the nth quantity to vary would allow us to know specifically the effect that the nth quantity will have on the system, with the assurance that comes from knowing that all other factors are kept the same. \textbf{On our space, this varying quantity manifests itself as a line \textit{maybe get rid of this last sentence}, we may only need to talk about coordinate lines, and introduce also coordinate surfaces, volumes, etc. with submanifolds}. 
 
 \begin{defn}
 	A \textbf{coordinate line} is the set of points in $\mathbb{R}^n$ obtained by allowing one quantity to vary and holding the others fixed. 
 \end{defn}
 
-With coordinate systems defined now, we must recognize that in many instances, two different coordinate systems function just as well to describe a certain object. Mathematically, this occurs when two sets, each with defined coordinate systems, overlap. The points that lie within this overlapping section may be described in either coordinate system. To give an example from geography, consider the "point" Moscow. It could very well show up on a map of Asia, with specific x and y coordinates, while also showing up on a map of Europe, with different, but equally valid x and y coordinates. Therefore, Moscow's position is described just as well on either map, and so its position can be freely transformed from one coordinate system to another. Alternatively, consider the "point" Lisbon. Lisbon will show up on a map of Europe, with valid x and y coordinates, but you would never find Lisbon on a map of Asia. Therefore, its position may only be described in terms of the coordinates on the map of Europe.
+
+\textbf{Use the word atlas with different charts. Also, while working through the text, try to sketch pictures to demonstrate concepts. Try to talk about with A5 B7 D3 kind of atlas}
+With coordinate systems defined now, we must recognize that in many instances, two different coordinate systems function just as well to describe a certain object. \textbf{Reword being specific of sets} Mathematically, this occurs when two sets, each with defined coordinate systems, overlap. The points that lie within this overlapping section may be described in either coordinate system. To give an example from geography, consider the "point" Moscow. It could very well show up on a map of Asia, with specific x and y coordinates, while also showing up on a map of Europe, with different, but equally valid x and y coordinates. Therefore, Moscow's position is described just as well on either map, and so its position can be freely transformed from one coordinate system to another. Alternatively, consider the "point" Lisbon. Lisbon will show up on a map of Europe, with valid x and y coordinates, but you would never find Lisbon on a map of Asia. Therefore, its position may only be described in terms of the coordinates on the map of Europe.
 
 
 \begin{defn}
@@ -77,6 +87,8 @@ With coordinate systems defined now, we must recognize that in many instances, t
 \end{defn}
 
 
+
+\textbf{May have to describe the meaning of the diagram, reader might not know. Or take it out}
 \begin{tikzpicture}
 [roundnode/.style={circle, draw=green!60, fill=green!5, very thick, minimum size=7mm},
 squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size=5mm},
@@ -93,25 +105,27 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 \end{tikzpicture}
 
 
-
+\textbf{This paragraph doesnt follow. Be specific with what Im trying to talk about}
 So, we now have a notion of sets that may be mapped to the real numbers. This allows us to define one of the most important tools in mathematical physics: the \textbf{manifold.}
 
 \begin{defn}
 	A \textbf{manifold} is a set of physical objects $X$ such that for any $x \in X$ there exists a $U \subset X$ that contains $x$ and upon which a coordinate system $Q$ is defined.
 \end{defn}
 
-Earlier, weather was given as an example of a set of physical objects (\textbf{specify above that weather would be a set of physical objects}), with readings such as temperature and humidity allowing us to define a coordinate system. In this context, the "manifold" would be a full weather report (\textbf{clarify this example}) 
+\textbf{Not a set of physical objects, a set of possible states}
+Earlier, weather was given as an example of a set of physical objects (\textbf{specify above that weather would be a set of physical objects}), with readings such as temperature and humidity allowing us to define a coordinate system. In this context, the "manifold" would be a full weather report (\textbf{no, its the set of weather configurations}) 
 
 The Earth is a classic example of a manifold, which allows for further discussion of the geography example. Because of the poles, every location on earth cannot be quantified with only one set of coordinates. (\textbf{Elaborate})
  
 
-
+\textbf{Analogy: The }
 
 \subsection{Sub-manifolds and k-surfaces}
 
 - \emph{Within a manifold can lie a manifold of equal or smaller dimension, with a mapping between them}
 
-A manifold may be a subset of another larger manifold, which may have more quantities, simply more points, etc. Back to the weather example, if in the original weather report we were worrying about temperature, humidity, and wind speed, we could instead hold one of the three values fixed (say, humidity), and vary the other two. The latter manifold, with humidity held constant, would be a \textbf{submanifold} of the former, where all three variables are allowed to change.  
+\textbf{Reword first sentence. Definitely talk about classifying submaniflds based on their dimensionality. K-surfaces have k-freedoms. Boundaries occur where the varying is stopped}
+A manifold may be a subset of another larger manifold, which may have more quantities, simply more points, etc. Back to the weather example, if in the original weather report we were worrying about temperature, humidity, and wind speed, we could instead hold one of the three values fixed (say, humidity), and vary the other two. The latter manifold, with humidity held constant, would be a \textbf{submanifold} of the former, where all three variables are allowed to change.
 
 
 \begin{defn}
@@ -140,6 +154,7 @@ In general, we will be using the term "k-surface", instead of "submanifold."
 	For some manifold X of dimension n, $S^k$ is the set of all possible \textbf{k-surfaces}, or sub-manifolds of dimension $k \leq n$, and S $=$ $\cup^n_{k=0}S^k$ is the set of all k-surfaces. 
 \end{defn}
 
+\textbf{Replace this whole paragraph with the talk about limit points}
 Now that we are able to define manifolds within manifolds, we have a notion of where a point lies relative to some manifold. Specifically, we are able to say whether a point is exterior to the k-surface, \textbf{interior} to the k-surface (that is, on the surface, and surrounded by points also on the surface), and on the \textbf{boundary} of the k-surface (lying on the "edge" of the surface).  
 
 
@@ -147,9 +162,14 @@ Now that we are able to define manifolds within manifolds, we have a notion of w
 	Given k-surface $\sigma^k \in S^k$, if for some point $x \in \sigma^k$ you can construct a open neighborhood around x completely within $\sigma^k$, then x is an \textbf{interior point} of $\sigma^k$. 
 \end{defn}
 
+
+\textbf{Boundary points aren't relaly the points that aren't interior, they are the limit points that dont have an open set}
 \begin{defn}
 	Given k-surface $\sigma^k \in S^k$, if some point $x \in \sigma^k$ is not an interior point, then $x$ is a \textbf{boundary point}.
 \end{defn}
+
+
+\textbf{Maybe give an example of a set without a bpundary}
 
 Later on, it will become important to be able to concentrate entirely on the boundary of a k-surface. Therefore, we must make use of the \textbf{boundary operator} in order to go from a k-surface to it's boundary. 
 
@@ -157,11 +177,12 @@ Later on, it will become important to be able to concentrate entirely on the bou
 	For k-surface $\sigma^k \in S^k$, the \textbf{boundary operator} $\partial : S^k \to S^{k-1}$ gives the set of boundary points of $\sigma^k$. 
 \end{defn}
 
-The dimension of the boundary is one less than the dimension of the k-surface itself. To get an intuitive feel for why this must be so, consider a cube (\textbf{embedded?}) in $\mathbb{R}^3$. The boundary of a cube would be its twelve edges. Orienting our coordinate system such that the origin is on a corner of the cube, with the coordinate axes lying along the three edges, we see that when traveling along the boundary of the cube, one of the three coordinates will be held fixed. When transitioning between edges, the fixed coordinate will also change. (\textbf{Maybe have a picture here demonstrating what I mean?})
+The dimension of the boundary is one less than the dimension of the k-surface itself. To get an intuitive feel for why this must be so, consider a cube (\textbf{embedded? yes}) in $\mathbb{R}^3$. \textbf{The boundary of a cube would be its sides, because they stop movement out of the cube}. Orienting our coordinate system such that the origin is on a corner of the cube, with the coordinate axes lying along the three edges, we see that when traveling along the boundary of the cube, one of the three coordinates will be held fixed. When transitioning between edges, the fixed coordinate will also change. (\textbf{Maybe have a picture here demonstrating what I mean?})
 
 
 The boundary of our weather report is a little more abstract. (\textbf{The boundary is a specific climate? But different climates can have the same weather depending on the day. })
 
+\textbf{Fix this example}
 Furthermore, $\partial\partial \sigma^k$ is empty. Consider once again a cube in $\mathbb{R}^3$. Geometrically, it can be seen that any point on the boundary of the cube (on the edge) is interior with respect to the boundary, since any neighborhoood constructed around any point on the edge will still be on the edge. There will be discontinuities at each of the corners, but because there are countably many discontinuities (that is, eight), we don't have a problem. (\textbf{Elaborate on why that's ok})
 
 \begin{coro}
@@ -171,8 +192,9 @@ Furthermore, $\partial\partial \sigma^k$ is empty. Consider once again a cube in
 
 \subsection{Linear Functionals of K-surfaces}
 
-Now that we have discussed k-surfaces, we want to be able to have functions applied over them. We require that these functions be linear; that is, if two k-surfaces overlap only on their boundary, then applying a function over the two surfaces at once is equivalent to applying the function to each of them separately, and summing their contributions. We call linear functions of k-surfaces \textbf{k-functionals}. 
 
+\textbf{Extra condition, the length isnt a 1 form. The limit of alternating horizontal and vertical lines isn't the length of the diagonal. Length of limit isnt limit of length. So fix the definition. Maybe adding requirement of limit}
+Now that we have discussed k-surfaces, we want to be able to have functions applied over them. We require that these functions be linear; that is, if two k-surfaces overlap only on their boundary, then applying a function over the two surfaces at once is equivalent to applying the function to each of them separately, and summing their contributions. We call linear functions of k-surfaces \textbf{k-functionals}. 
 
 \begin{defn}
 	A \textbf{linear function of k-surfaces}, or \textbf{k-functional}, is a function $f_k : S^k \to \mathbb{R}$ such that for $\sigma^k_1$, $\sigma^k_2 \in S^k$, if $\sigma^k_1 \cap \sigma^k_2 \subseteq \partial \sigma^k_1 \cup \partial \sigma^k_2$, then $f_k(\sigma^k_1\cup \sigma^k_2) = f_k(\sigma^k_1) + f_k(\sigma^k_2)$. 
@@ -182,10 +204,10 @@ Now that we have discussed k-surfaces, we want to be able to have functions appl
 	$F_k$ is the set of all functionals of dimension k, and $F = \cup_{k=0}^nF_k$ is the set of all k-functionals. 
 \end{defn}
 
-In the previous section, we discussed the boundary operator as a map from a k-surface to its boundary. It's reasonable, then, that we ought to be able to use our k-functionals on the boundary. To do so, however, we need an operator on k-functionals that is equivalent to the boundary operator on k-surfaces. In complement to "boundary", we define the \textbf{interior operator} thusly:
+In the previous section, we discussed the boundary operator as a map from a k-surface to its boundary. It's reasonable, then, that we ought to be able to use our k-functionals on the boundary. To do so, however, we need an operator on k-functionals that is equivalent to the boundary operator on k-surfaces. In complement to "boundary", we define the \textbf{interior functional or boundary fuctional} \textit{extend this paragraph to include the definition}
 
 \begin{defn}
-	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{interior operator} on k-functionals. 
+	$\eth : F_k \to F_{k+1}$ such that $\eth f_k(\sigma^{k+1}) = f_k(\partial \sigma^{k+1})$ is the \textbf{interior functional} on k-functionals. 
 \end{defn}
 
 Because applying the interior operator to a k-functional is equivalent to applying the boundary operator to a k-surface, it must be that properties of the boundary operator hold true for the interior operator. 
@@ -209,13 +231,12 @@ So, $f_k(\emptyset) = f_k(\emptyset\cup\emptyset) = f_k(\emptyset) + f_k(\emptys
 \end{prop}
 \begin{proof}
 
-
 	Let $f_k : S^k \to \mathbb{R}$, $g_{k+1} : S^{k+1} \to \mathbb{R},$ and $h_{k+2}: S^{k+2} \to \mathbb{R}$ be linear functions, and let $\sigma^k$ be an element of $S^k$. $f_k(\sigma^k) = g_{k+1}(\partial \sigma^k) = h_{k+2}(\partial\partial \sigma^k) = f_k(\emptyset) = 0$. 
 	
 	So, $h^{k+2}(s) = 0$ $\forall$ $\sigma^k$, and $h^{k+2}$ is the zero function. 
 \end{proof}
 
-\subsection{Conclusion}
+\subsection{Summary}
 
 
 
